[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
warp = "0.4.0"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
solana-program = "3.0.0"
solana-system-program = "3.0.0"
solana-system-interface = "2.0.0"
solana-rpc-client = "3.0.0"
solana-commitment-config = "3.0"
solana-compute-budget-instruction = "3.0"
dirs = "6.0.0"
libc = "0.2.1"
nix = { version = "0.30", features = ["signal"]}

[[bin]]
name = "helius"
path = "src/helius/main.rs"

[[bin]]
name = "native"
path = "src/native/main.rs"

[[bin]]
name = "bench"
path = "src/tests/bench.rs"

[[bin]]
name = "send"
path = "src/utils/send.rs"
